--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Ticketee</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
-</html>
+<%= stylesheet_link_tag  "application", media: "all",
+                         "data_turbolinks_track" => true %>
