--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,10 @@
-<!DOCTYPE html>
-<html>
 <%= link_to  "New Project", new_project_path %>
-</html>
+<h2>Projects</h2>
+<ul>
+  <% @projects.each do |project| %>
+   <li><%= link_to project.name, project %></li>
+  <% end %>
+</ul>
 
 
 
