--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,6 +5,8 @@
                               method: :delete,
                               data: { confirm:
                                 "Are you sure you want to delete this project?"} %>
+<%= link_to "New Ticket", new_project_ticket_path(@project) %>
+
 
 
 
